--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Unit Tests
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  unit_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -17,5 +17,11 @@ jobs:
         with:
           go-version: ^1.20
 
-      - name: Go build
-        run: go build
+      - name: Install dependencies
+        run: go get -t
+
+      - name: Install ginkgo binary
+        run: go install github.com/onsi/ginkgo/v2/ginkgo
+
+      - name: Unit Tests
+        run: ginkgo ./...
