--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,9 @@ jobs:
           go-version: ^1.20
 
       - name: Install dependencies
-        run: go get -t
+        run: >
+          go get -t
+          go get github.com/onsi/ginkgo/v2/ginkgo@v2.13.1
 
       - name: Install ginkgo binary
         run: go install github.com/onsi/ginkgo/v2/ginkgo
