--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: ^1.20
 
       - name: Install dependencies
-        run: >
+        run: |
           go get -t
           go get github.com/onsi/ginkgo/v2/ginkgo@v2.13.1
 
