--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,12 +18,12 @@ jobs:
           go-version: ^1.20
 
       - name: Install dependencies
-        run: |
-          go get -t
-          go get github.com/onsi/ginkgo/v2/ginkgo@v2.13.1
+        run: go get -t
 
       - name: Install ginkgo binary
-        run: go install github.com/onsi/ginkgo/v2/ginkgo
+        run: |
+          go get github.com/onsi/ginkgo/v2/ginkgo@v2.13.1
+          go install github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Unit Tests
         run: ginkgo ./...
